# IEP

./: README.md
EpurasGeorgian/Tema10/: a.out  main.cpp
EpurasGeorgian/Tema10/src/: Gaina.cpp  Gaina.hpp  Papagal.cpp  Papagal.hpp  Pasare.hpp  Strut.cpp  Strut.hpp
EpurasGeorgian/Tema11/: a.out  main.cpp
EpurasGeorgian/Tema4/: main  main.cpp
EpurasGeorgian/Tema5/: main  main.cpp
EpurasGeorgian/Tema6/: a.out  main.cpp
EpurasGeorgian/Tema7/: a.out  main.cpp
EpurasGeorgian/Tema8/: Makefile  modules.order  tema8.c  tema8.ko  tema8.mod  tema8.mod.c
EpurasGeorgian/Tema9/: Makefile  modules.order  readme.md  tema9.c  tema9.ko  tema9.mod  tema9.mod.c
TemaIep1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt  main.cpp  myLib.cpp  myLib.h
negrea.claudiu/: README.md
negrea.claudiu/Tema10/: Makefile  a.out  main.cpp
negrea.claudiu/Tema11/: Main.cpp  Makefile
negrea.claudiu/Tema4/: main.cpp
negrea.claudiu/Tema5/: Item7  Item7.cpp
negrea.claudiu/Tema6/: CMakeLists.txt  a.out  item  item13.cpp
negrea.claudiu/Tema7/: CMakeLists.txt
negrea.claudiu/Tema8/: .built-in.a.cmd  .mykernelmodule.ko.cmd  .mykernelmodule.mod.cmd  .mykernelmodule.mod.o.cmd  .mykernelmodule.o.cmd  Kbuild  Makefile  modules.order  mykernelmodule.c  mykernelmodule.ko  mykernelmodule.mod  mykernelmodule.mod.c
negrea.claudiu/Tema9/: .built-in.a.cmd  .testdriver.ko.cmd  .testdriver.mod.cmd  .testdriver.mod.o.cmd  .testdriver.o.cmd  Makefile  README.md  modules.order  testdriver.c  testdriver.ko  testdriver.mod  testdriver.mod.c
(+18 files in other folders)
